test/pending/pos/sig/sigs.scala
package test
class T {
  def foo[T](x: T): T = x
  def bar[T](x: T): T = x
}

